--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -24,9 +24,9 @@ backupFileRotation=5
 # resouce: Recurso al que se quiere acceder
 # ------------------------------------------------------------//
 [credentials]
-key=sipay-test-team
-secret=api-secret
-resource=sipay-test-noces
+key=sipay-key
+secret=sipay-secret
+resource=sipay-resource
 
 # **************************************************************
 # API
