JSDK-2 Fixed Update documentation

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -38,7 +38,7 @@ resource=sipay-resource
 # mode: Modo de encriptacion de la firma, [sha256, sha512]
 # ------------------------------------------------------------//
 [api]
-environment=develop
+environment=sandbox, staging o live
 version=v1
 mode=sha256
 
