Add ALTP methods

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -27,6 +27,7 @@ backupFileRotation=5
 key=sipay-key
 secret=sipay-secret
 resource=sipay-resource
+resource-altp=sipay-test-altp-methods
 
 # **************************************************************
 # API
