--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ repositories {
 
 jar {
     baseName = 'sipay'
-    version = '1.1.0'
+    version = '1.1.2'
 }
 
 sourceCompatibility = 1.8
@@ -18,4 +18,5 @@ dependencies {
     compile group: 'org.json', name: 'json', version: '20160810'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    annotationProcessor 'org.projectlombok:lombok:1.16.20'
 }
